<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical" android:layout_marginTop="8dp"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/linearLayout">
        <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/name"
                  android:textColor="@color/colorPrimaryDark" android:textSize="16sp"/>
        <TextView android:id="@+id/nameTextView" android:layout_width="wrap_content"
                  android:layout_height="match_parent" android:textSize="24sp" tools:text="Madrigal"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/linearLayout2">
        <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/race"
                  android:textColor="@color/colorPrimary" android:textSize="16sp"/>
        <TextView android:id="@+id/raceTextView" android:layout_width="wrap_content"
                  android:layout_height="match_parent" android:textSize="24sp" tools:text="Elf"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/linearLayout3">
        <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/stats"
                  android:textColor="@color/colorPrimary" android:textSize="16sp"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:layout_marginRight="4dp" android:paddingTop="8dp" android:text="@string/wisdom"
                      android:textColor="@color/colorPrimary" android:textSize="16sp"
                      android:layout_marginEnd="4dp"/>
            <TextView android:id="@+id/wisdomTextView" android:layout_width="wrap_content"
                      android:layout_height="match_parent" android:layout_marginRight="8dp" android:textSize="24sp"
                      tools:text="16"
                      android:layout_marginEnd="8dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:layout_marginRight="4dp" android:paddingTop="8dp" android:text="@string/strength"
                      android:textColor="@color/colorPrimary" android:textSize="16sp"
                      android:layout_marginEnd="4dp"/>
            <TextView android:id="@+id/strengthTextView" android:layout_width="wrap_content"
                      android:layout_height="match_parent" android:layout_marginRight="8dp" android:textSize="24sp"
                      tools:text="16"
                      android:layout_marginEnd="8dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:layout_marginRight="4dp" android:paddingTop="8dp" android:text="@string/dexterity"
                      android:textColor="@color/colorPrimary" android:textSize="16sp"
                      android:layout_marginEnd="4dp"/>
            <TextView android:id="@+id/dexterityTextView" android:layout_width="wrap_content"
                      android:layout_height="match_parent" android:textSize="24sp" tools:text="16"/>
        </LinearLayout>
    </LinearLayout>
    <Button android:id="@+id/generateButton" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/generate"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>